fixed animation link

--- a/assets/style.css
+++ b/assets/style.css
@@ -138,7 +138,7 @@ span{
   }
 
   .answer-q {
-    background-image: url("img/iconQ.png");
+    background-image: url("../img/iconQ.png");
   }
 
   .x-icon {
