--- a/assets/style.css
+++ b/assets/style.css
@@ -25,6 +25,10 @@ img {
   cursor: pointer;
 }
 
+.selectable, .lessonMenuitem{
+  cursor: pointer;
+}
+
 #outerRight {
   position: relative;
   float: right;
@@ -65,21 +69,17 @@ img {
   font-size: 0.8em;
   font-weight: 100;
   margin: 0 auto;
-  margin-top: -18px;
   border: 1px solid red;
   border-radius: 10px;
   position: absolute;
   display: inline-block;
-  left: 31%;
-  margin-top: -33px;
+  left: 38%;
+  margin-top: -5px;
   z-index: 1001;
-}
-
-#questionBottom>img {
   padding: 0px 5px 0px 5px;
   margin-bottom: -6px;
 }
-
+ 
 .answer-icon {
   margin-bottom: -5px;
   margin-right: 5px;
@@ -164,6 +164,7 @@ img {
 
 #scores-table {
   margin-top: 40px;
+  width: 100%;
 }
 
 #feedbackDiv {
@@ -219,6 +220,193 @@ img {
   background-color: none;
   border: none;
 }
+@media (max-width: 599px) {
+  /* background */
+  body {
+    font-size: .75em;
+  }
+  span {
+    font-size: 1em;
+    line-height: 1.8em;}
+
+  .sbBackground {
+    position: fixed;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: 450px;
+  }
+  #studyBuddy {
+    position: relative;
+    width: 450px;
+    margin: 0 auto;
+    padding-top: 68px;
+  }
+  /* left */
+  .answerBtns {
+    height: 100%;
+    float: left;
+    padding-left: 19px;
+    padding-top: 39px;
+  }
+  .answerBtn {
+    width: 43px;
+  }
+  /* center */
+  #frame {
+    width: 245px;
+    padding-left: 95px;
+  }
+
+  .main-menu {
+    width: 240px;
+    margin: 0 auto;
+    text-align: center;
+    padding-top: 5px;
+  }
+  .main-menu>input {
+    width: 85px;
+  }
+  .menu-heading {
+    margin-bottom: 5px;
+  }
+  #view-scores {
+    width: 125px;
+    float: right;
+    margin-top: -1px;
+    margin-right: -30px;
+  }
+  /* right */
+  #outerRight {
+    position: relative;
+    float: right;
+    margin-top: 37px;
+    margin-right: 28px;
+  }
+  .sbMenSel {
+    width: 60px;
+    margin-left: 10px;
+  }
+  #sbMenuBtn {
+    width: 46px;
+  }
+  #sbSelectBtn {
+    width: 46px;
+    margin-top: -9px;
+  }
+  .sbArrow>img {
+    width: 9px;
+    text-align: center;
+  }
+  .sbArrow {
+    padding: 5px 5px 5px 5px;
+  }
+  #sbUp>img {
+    margin-top: 10px;
+    margin-left: 22px;
+  }
+  #sbDwn>img {
+    margin-left: 22px;
+    margin-bottom: -1px;
+  }
+  #sbLft>img {
+    margin-top: 3px;
+    margin-right: 8px;
+    margin-left: 7px;
+  }
+
+  .lessonMenuTitle {
+    margin-bottom: 5px;
+    margin-left: 5px;
+  }
+
+  .menu-heading {
+ 
+    margin-left: 5px;
+  }
+
+  #questionText {
+    font-size: 10px;
+    min-height: 200px;
+    margin-left: 5px;
+    margin-top: 10px;
+
+  }
+  .x-icon {
+    margin-left: -15px;
+    margin-bottom: -5px;
+    width: 15px;
+    height: 15px;
+  }
+  .y-icon {
+    margin-left: -15px;
+    margin-bottom: -5px;
+    width: 15px;
+    height: 15px;
+  }
+  .answer-image {
+    float: right;
+    margin-top: -75px;
+    margin-right: 20px;
+    max-width: 50px;
+    margin-left: 1px;
+  }
+  
+  #questionBottom {
+    font-size: 0.8em;
+    font-weight: 100;
+    margin: 0 auto;
+    border: 1px solid red;
+    border-radius: 10px;
+    position: absolute;
+    display: inline-block;
+    left: 35%;
+    margin-top: -68px;
+    z-index: 1001;
+  }
+  #feedbackDiv {
+    width: 95%;
+    margin-left: 5px;
+  }
+  #feedbackDiv > p {
+    font-size: 11px
+  }
+  #feedbackDiv > p > img{
+    width: 80px !important;
+    margin-top: 10px;
+
+  }
+  .answers {
+    line-height: 1.6;
+    margin-top: -20px;
+    font-size: 10px
+  }
+  .answers>a>img {
+    width: 15px;
+    height: 15px;
+  }
+  #FBarrow {
+    left: 37%;
+  }
+  #feedbackDiv {
+    min-height: 187px;
+  }
+  #bottomQ {
+    margin-bottom: -4px;
+    width: 13px;
+    height: 13px;
+    padding: 1px;
+  }
+  #animation {
+    width: 80%;
+    margin-left: 28px;
+  }
+  #rev-mistakes {
+    float: right;
+    margin-top: 30px;
+  }
+}
 
 @media (min-width: 600px) {
   /* background */
@@ -262,6 +450,7 @@ img {
   }
   .menu-heading {
     margin-bottom: 5px;
+ 
   }
   #view-scores {
     width: 125px;
